# woodhouse

./: .mcp.json  README.md  pyproject.toml
src/jphtools/: __main__.py  code.py  images.py
src/jphtools/weaviate_examples/: 01_connect.py  02_schema.py  20_search_methods_demo copy.py  25_rag_and_generation.py
src/woodhouse/: __main__.py  code.py  notebooks.py
src/woodhouse/references/: weaviate.py
src/woodhouse/weaviate_examples/: 05_docker_compose.yaml  10_quick_setup_with_samples.py
tests/: test_images.py
