[project]
name = "woodhouse"
version = "0.3.0-a2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "jupyter>=1.1.1",
    "pydantic-ai>=0.7.4",
    "questionary>=2.0.1",
]
authors = [
    {name = "JP Hwang", email = "me@jphwang.com"},
]
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/woodhouse"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
woodhouse = "woodhouse.__main__:cli"
